<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="206dp"
        android:src="@drawable/logo_bun" android:contentDescription="@string/description_logo"/>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/multiplayer"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/multiplayer" />
    </RelativeLayout>

    <Button
        android:id="@+id/one_player"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/one_player" />

    <Button
        android:id="@+id/restore_game"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/restore_game" />

    <Button
        android:id="@+id/preferences"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/prefs" />

    <Button
        android:id="@+id/about"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_help" />

</LinearLayout>